tests/compile_errors/027-early-return.buzz
// Code after return statement will never be reached
import "std";

test "Early return" {
    std\print("I sure hope i'm not interrupted...");

    return;

    std\print("Guess I was");
}